# chess-ai

./: Cargo.toml  README.md
src/: ai.rs  clock.rs  lib.rs  main.rs  workspace.code-workspace
